--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 /* IMPORTING THE FONTS I DOWNLOADED */
-/* @font-face {
+@font-face {
     font-family: SourceRegular;
     src: url(../fonts/Source_Sans_3/static/SourceSans3-Regular.ttf);
 }
@@ -16,7 +16,7 @@
 @font-face {
     font-family: SourceLight;
     src: url(../fonts/Source_Sans_3/static/SourceSans3-Light.ttf);
-} */
+}
 
 /* RESETS THE BROWSER DEFAULT */
 * {
@@ -47,7 +47,7 @@ a {
 /* THE CONTAINER */
 .container {
     height: 100vh;
-    /* width: 100vh; */
+    width: 100vh;
 }
 
 /* CALCULATOR CLASS */
@@ -92,6 +92,7 @@ a {
 }
 
 /* THE DISPLAY */
+
 #display::-webkit-scrollbar {
     display: block;
     height: 3px;
